; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/sh/gnu/extr_sh-dis.c_print_insn_shb.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/sh/gnu/extr_sh-dis.c_print_insn_shb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @print_insn_shb(i32 %0, %struct.disassemble_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.disassemble_info*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.disassemble_info* %1, %struct.disassemble_info** %4, align 8
  %6 = load %struct.disassemble_info*, %struct.disassemble_info** %4, align 8
  %7 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %6, i32 0, i32 0
  store i64 0, i64* %7, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.disassemble_info*, %struct.disassemble_info** %4, align 8
  %10 = call i32 @print_insn_shx(i32 %8, %struct.disassemble_info* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @print_insn_shx(i32, %struct.disassemble_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
